fix: 调整样式，修复动作回填的问题

--- a/packages/provider-app-entry/src/style/layout.scss
+++ b/packages/provider-app-entry/src/style/layout.scss
@@ -33,9 +33,10 @@ $provider-nav-tabbar-height: 38px;
 }
 
 #provider_app_content {
-  position: absolute;
+  position: fixed;
   top: $provider-header-height;
   right: 0;
   left: 0;
   bottom: 0;
+  overflow: auto;
 }
