--- a/packages/provider-app-pages-hub/PageDesigner/style/style.scss
+++ b/packages/provider-app-pages-hub/PageDesigner/style/style.scss
@@ -94,14 +94,12 @@
 }
 
 /** 页面设置弹窗 */
-.page-config-container {
-  .page-action-selector {
-    .search-area {
-      margin-top: 0.5rem;
-      margin-bottom: 0.5rem;
-    }
-    .ant-table-cell .ant-form-item {
-      margin-bottom: 0;
-    }
+.page-config-container .page-action-selector, .page-action-submit-data {
+  .search-area {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+  .ant-table-cell .ant-form-item {
+    margin-bottom: 0;
   }
 }
