fix: 更改字段值的相关样式

--- a/packages/provider-app-pages-hub/PageDesigner/components/PDCommonUI/ValueHelper/style.scss
+++ b/packages/provider-app-pages-hub/PageDesigner/components/PDCommonUI/ValueHelper/style.scss
@@ -9,6 +9,8 @@
     }
   }
   .value-type-selector {
+    vertical-align: 0.5px;
+    margin-left: -1px;
     .search-input, .display-title {
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
