--- a/packages/provider-app-pages-hub/PageDesigner/style/style.scss
+++ b/packages/provider-app-pages-hub/PageDesigner/style/style.scss
@@ -6,12 +6,22 @@
   .action-area {
     position: absolute;
     right: 0;
-    top: 10px;
-    background-color: #FFF;
+    top: -10px;
     z-index: 1;
     // padding: 3px 10px;
     display: none;
-    box-shadow: 0 0 2px rgba(#000, 0.2);
+    .action-btn {
+      display: inline-block;
+      background-color: #FFF;
+      text-align: center;
+      height: 40px;
+      width: 40px;
+      line-height: 40px;
+      border-radius: 40px;
+      font-size: 20px;
+      box-shadow: 0 3px 3px rgba(#000, 0.2);
+      margin-left: 10px;
+    }
   }
 }
 
@@ -83,12 +93,12 @@
   &:hover {
     box-shadow: 0 0 3px rgba(#a6bcf8, 1);
     z-index: 2;
-    .action-area {
-      display: block;
-    }
   }
   &.selected {
     box-shadow: 0 0 3px rgba(#376BFB, 1);
+    .action-area {
+      display: block;
+    }
     z-index: 3;
   }
 }
