fix: 完善“值”样式

--- a/packages/provider-app-pages-hub/PageDesigner/components/PDCommonUI/ValueHelper/style.scss
+++ b/packages/provider-app-pages-hub/PageDesigner/components/PDCommonUI/ValueHelper/style.scss
@@ -20,7 +20,7 @@
   }
   .variable-selector {
     width: calc(100% - 70px);
-    &.focusing {
+    &.ant-select-focused {
       z-index: 1;
     }
     .ant-select-selector {
