fix: 发现 deer-ui 的下拉组件在滚动列表中会有问题，改用antd的下拉组件

--- a/packages/provider-app-pages-hub/PageDesigner/components/PDCommonUI/ValueHelper/style.scss
+++ b/packages/provider-app-pages-hub/PageDesigner/components/PDCommonUI/ValueHelper/style.scss
@@ -32,7 +32,9 @@
   .value-type-selector {
     vertical-align: top;
     margin-left: -1px;
-    .search-input, .display-title {
+    .ant-select-selector {
+      border-color: #e2e8f0;
+      height: 34px;
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
     }
