--- a/packages/consumer-app-hub/web-client/src/components/SelectApp/style.css
+++ b/packages/consumer-app-hub/web-client/src/components/SelectApp/style.css
@@ -3,16 +3,15 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 60%;
+  width: 900px;
+  padding: 8px;
   max-height: 90vh;
   overflow-y: auto;
 }
 
 .selectAppItemWrap {
   position: relative;
-  width: 100%;
-  padding-bottom: 100%;
-  height: 0;
+  height: 160px;
 }
 
 .selectAppItem {
