--- a/packages/consumer-app-hub/web-client/src/components/SelectApp/style.css
+++ b/packages/consumer-app-hub/web-client/src/components/SelectApp/style.css
@@ -1,11 +1,14 @@
-.selectAppContainer {
+.selectApp {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.selectAppContainer {
   width: 900px;
   padding: 8px;
-  max-height: 90vh;
+  max-height: 80vh;
   overflow-y: auto;
 }
 
@@ -42,7 +45,29 @@
   height: 50px !important;
 }
 
+.selectAppItemHandle > div {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .selectAppItemIcon {
   font-size: 45px;
   cursor: pointer;
+}
+
+.selectAppRow {
+  padding: 8px;
+}
+
+.selectAppTitle {
+  position: relative;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 27px;
+  text-align: center;
 }
