--- a/packages/platform-widget-prop-item-hub/QueryTypeHelper/style.scss
+++ b/packages/platform-widget-prop-item-hub/QueryTypeHelper/style.scss
@@ -1,5 +1,6 @@
 .prop-query-type {
   .prop-query-style .ant-select {
-    width: calc( 100% - 70px - 3rem);
+    margin-left: 1rem;
+    width: calc( 100% - 70px - 2rem);
   }
 }
