--- a/packages/platform-widget-hub/GeneralTable/style.scss
+++ b/packages/platform-widget-hub/GeneralTable/style.scss
@@ -1,11 +1,19 @@
 .ant-pro-table {
- &.title-align-center .ant-pro-table-list-toolbar-container .ant-pro-table-list-toolbar-left {
+  &.title-align-center .ant-pro-table-list-toolbar-container .ant-pro-table-list-toolbar-left {
     flex: 1 1;
     justify-content: center;
   }
-&.title-align-right .ant-pro-table-list-toolbar-container .ant-pro-table-list-toolbar-left {
+  &.title-align-right .ant-pro-table-list-toolbar-container .ant-pro-table-list-toolbar-left {
     flex: 1 1;
     justify-content: flex-end;
     padding-right: 1rem
+  }
+  &.no-row-select-cell {
+    .ant-table-cell.ant-table-selection-column {
+      .ant-checkbox-wrapper,.ant-radio-wrapper{
+        display:none;
+        width: 0;
+      }
+    }
   }
 }
