fix: 修复样式 import 的问题

--- a/packages/provider-app/provider-app-entry/src/style/deer-ui/index.scss
+++ b/packages/provider-app/provider-app-entry/src/style/deer-ui/index.scss
@@ -6,6 +6,4 @@
 @import "./var.scss";
 @import "@deer-ui/core/style/index.scss";
 
-@import './ui.scss';
-@import './tabs-for-router.scss';
-@import "./login.scss";
+@import "./ui.scss";
