--- a/packages/provider-app/provider-app-entry/src/style/style.scss
+++ b/packages/provider-app/provider-app-entry/src/style/style.scss
@@ -1,5 +1,7 @@
-@import './deer-ui/index.scss';
-@import './layout.scss';
+@import "./deer-ui/index.scss";
+@import "./layout.scss";
+@import "./tabs-for-router.scss";
+@import "./login.scss";
 
 .app-nav {
   .ant-menu {
