feat: 完善配置端的样式、导航的交互

--- a/packages/provider-app/provider-app-entry/src/style/deer-ui/var.scss
+++ b/packages/provider-app/provider-app-entry/src/style/deer-ui/var.scss
@@ -6,16 +6,16 @@ $admin-main-container-max-width: 1980px;
 $table-td-padding-verical: 10px;
 
 // $themeColor: $blue;
-$themeColor: #488CF0;
+$themeColor: #488cf0;
 
 $base-bg-color: #fff;
 
-$main-bg-color: #FFF;
+$main-bg-color: #fff;
 $main-bg-dark-color: #333;
 
 // nav
 $nav-menu-bg-color: $main-bg-color;
-$nav-menu-width: 220px;
+$nav-menu-width: 240px;
 $nav-menu-collapse-width: 40px;
 $nav-menu-item-border-color: #777;
 $nav-menu-item-active-text-color: #000;
