feat: 调整配置端整体样式，更新 webpack 打包链路

--- a/packages/provider-app/provider-app-entry/src/style/deer-ui/var.scss
+++ b/packages/provider-app/provider-app-entry/src/style/deer-ui/var.scss
@@ -8,7 +8,7 @@ $table-td-padding-verical: 10px;
 // $themeColor: $blue;
 $themeColor: #488cf0;
 
-$base-bg-color: #fff;
+$base-bg-color: #edf1f7;
 
 $main-bg-color: #fff;
 $main-bg-dark-color: #333;
