--- a/packages/provider-app/provider-app-entry/src/style/tabs-for-router.scss
+++ b/packages/provider-app/provider-app-entry/src/style/tabs-for-router.scss
@@ -3,9 +3,8 @@
   margin-top: 10px;
   position: sticky;
   top: 0;
-  // background-color: $base-bg-color;
+  background-color: $base-bg-color;
   display: flex;
-  // background-color: #f7f7f7;
 
   .tab-item {
     position: relative;
