--- a/packages/provider-app/provider-app-pages-hub/PageDesigner/style/style.scss
+++ b/packages/provider-app/provider-app-pages-hub/PageDesigner/style/style.scss
@@ -7,7 +7,7 @@
     position: absolute;
     right: 0;
     top: -10px;
-    z-index: 1;
+    z-index: 21;
     // padding: 3px 10px;
     display: none;
     .action-btn {
@@ -56,7 +56,7 @@
 }
 
 .comp-renderer {
-  padding: 10px;
+  // padding: 10px;
   background-color: #fff;
   // pointer-events: none;
   .form-title {
@@ -100,7 +100,7 @@
     z-index: 2;
   }
   &.selected {
-    box-shadow: 0 0 3px rgba(#376bfb, 1);
+    box-shadow: 0 0 2px rgba(#376bfb, 1);
     > .drag-item > .action-area {
       display: block;
     }
