--- a/packages/consumer-app/web-client/src/style/index.scss
+++ b/packages/consumer-app/web-client/src/style/index.scss
@@ -29,3 +29,13 @@
   background-color: #FFF;
   padding: 20px;
 }
+
+.hy-photo {
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+  border-radius: 50%;
+  overflow: hidden;
+  vertical-align: middle;
+  margin: 0 10px;
+}
