--- a/packages/provider-app/provider-app-pages-hub/PageDesigner/style/style.scss
+++ b/packages/provider-app/provider-app-pages-hub/PageDesigner/style/style.scss
@@ -119,3 +119,35 @@
     margin-bottom: 0;
   }
 }
+
+/* 滚动条样式 */
+.overflow-scroll {
+  overflow-y: scroll;
+  overflow-x: scroll;
+}
+.overflow-scroll::-webkit-scrollbar {
+  /*滚动条整体样式*/
+  width: 5px;
+  height: 5px;
+}
+
+*::-webkit-scrollbar {
+  /*滚动条整体样式*/
+  width: 5px;
+  height: 5px;
+}
+*::-webkit-scrollbar-thumb {
+  /*滚动条里面小方块*/
+  border-radius: 10px;
+  max-height: 30px;
+  background: #ddd;
+  opacity: 0;
+}
+*::-webkit-scrollbar-track {
+  /*滚动条里面轨道*/
+  border-radius: 10px;
+  background: #fff;
+}
+*:hover::-webkit-scrollbar-thumb {
+  background: rgb(194, 183, 183);
+}
